# ai-docs

./: README.md  config.yaml  pyproject.toml
ai_docs/: __init__.py  cli.py  collector.py  editor.py  utils.py
tests/: test_cli.py  test_collector.py  test_editor.py
