# pyproject.toml
[tool.poetry]
name = "ai-docs"
version = "0.1.0"
description = "A tool to collect and process web content into Markdown."
authors = ["Rock Mutchler <rock@lifeinops.com>"]
license = "none"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
markdown = "^3.3.4" 
wisup_e2m = "^0.1.63"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
ai-docs = "ai_docs.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

